[project]
name = "arxiv-paper-get"
version = "1.0.0"
description = "Download arXiv papers: PDF + LaTeX source, auto-extract, local workspace"
requires-python = ">=3.10"
dependencies = []   # stdlib only — zero external dependencies

[project.scripts]
arxiv-paper-get = "arxiv_paper_get:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
